# Scribe

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
rust-bindings/: package-lock.json  package.json
rust-bindings/lib/: index.js
rust-bindings/native/: Cargo.toml  artifacts.json  index.node
rust-bindings/native/src/: binding_event.rs  data_types.rs  id_manager.rs  lib.rs
rust-bindings/native/src/data_types/: app_state.rs  document.rs  link.rs  mod.rs
src/: bullet.ts  index.html  main.ts  renderer.tsx  rust_interface.ts  style.scss
src/actions/: content_panel_actions.ts  keyboard_actions.ts
src/components/action_bar/: action_bar.tsx
src/components/content_body/: content_body.tsx
src/components/icon/: icon.scss
src/components/link_menu/: link_menu.tsx
src/components/side_panel/: side_panel.tsx
src/data/: document.ts  link.ts  node.ts  workspace.ts
src/main/: bullet.ts  document.ts  link.ts  main.ts  workspace_manager.ts
src/reducers/: action_panel_reducer.ts  content_panel_reducer.ts  keyboard_reducer.ts  root.ts
src/renderer/: context.tsx  context_actions.ts  context_actions_async.ts  hooks.ts  renderer.tsx  style.scss
src/renderer/action_bar/: action_bar.scss  action_bar.tsx
src/renderer/action_panel/: action_panel.scss  action_panel.tsx
src/renderer/content_body/: content_body.tsx
src/renderer/content_panel/: content_panel.scss  (+1 more)
src/rust-bindings/: binding_event.ts  rust_interface.ts
workspace/: Calculus.txt  Calculus_backup  Electricity.txt  Particle Physics.txt  links.list
(+43 files in other folders)
