[package]
name = "rust-bindings"
version = "0.1.0"
authors = ["Matt Smith <mss433@cornell.edu>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.1"

[dependencies]
neon = "0.5.1"
