[package]
name = "rust-bindings"
version = "0.1.0"
authors = ["Matt Smith"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.1"

[dependencies]
lazy_static = "1.4.0"
neon = "0.5.3"
int-enum = "0.4.0"
