[package]
name = "rust-bindings"
version = "0.1.0"
authors = ["Matt Smith"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.1"

[dependencies]
lazy_static = "1.4.0" #singleton state
neon = "0.5.3" #interface with js
int-enum = "0.4.0" #simple int-enum conversion
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
